Correct the id in media-query for small-hamster Due to changes in the last session with the jumping hamster.

--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,7 @@ header{
     }
    
 
-    .hamster-clipart{
+    #small-hamster{
 
         width: 8%;
     }
